--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,14 @@ services:
     volumes:
     -
       /data/postgres-data:/var/lib/postgresql/data
+
+  redis:
+    image: redis
+    ports:
+    -
+      6379:6379
+    restart: always
+    # set the volumes to store the data
+    volumes:
+    -
+      /data/redis-data:/data
