--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django
 djangorestframework
-psycopg2-binary
+django-redis
 django-cors-headers
 djangorestframework_simplejwt
+psycopg2-binary
 python-decouple
