--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,73 @@
-django
-djangorestframework
-django-redis
-django-cors-headers
-djangorestframework_simplejwt
-psycopg2-binary
-python-decouple
+aioredis==1.3.1
+asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+autobahn==23.1.2
+Automat==22.10.0
+certifi==2023.7.22
+cffi==1.16.0
+channels==3.0.5
+channels-redis==3.4.1
+charset-normalizer==3.3.0
+constantly==15.1.0
+cryptography==38.0.4
+daphne==3.0.2
+defusedxml==0.8.0rc2
+dj-database-url==2.1.0
+Django==4.0.1
+django-cors-headers==4.2.0
+django-extensions==3.2.3
+django-redis==5.4.0
+django-sendgrid-v5==1.2.2
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.21.0
+drf-yasg==1.21.7
+hiredis==2.2.3
+hyperlink==21.0.0
+idna==3.4
+importlib_resources==6.4.0
+incremental==22.10.0
+inflection==0.5.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+MarkupSafe==2.1.3
+msgpack==1.0.7
+oauthlib==3.2.2
+packaging==24.0
+pillow==10.3.0
+pkgutil_resolve_name==1.3.10
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.8.0
+pyOpenSSL==22.0.0
+python-decouple==3.8
+python-http-client==3.3.7
+python3-openid==3.2.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+redis==5.0.1
+referencing==0.34.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rpds-py==0.18.0
+sendgrid==6.10.0
+service-identity==23.1.0
+six==1.16.0
+social-auth-app-django==5.3.0
+social-auth-core==4.4.2
+sqlparse==0.4.4
+starkbank-ecdsa==2.2.0
+Twisted==23.8.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+typing_extensions==4.8.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.0.6
+Werkzeug==2.2.2
+zipp==3.18.1
+zope.interface==6.1
